--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/stripe-js": "^4.5.0",
     "@types/styled-components": "^5.1.34",
     "antd": "^5.20.3",
     "dayjs": "^1.11.13",
